# PiES

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  todo.txt
configs/: default_settings.json  settings.py
controller/: controller.py  error.py  lines.py  util.py
eqsys/: equationsystem.py  objects.py  util.py  validation.py
eqsys/solve/: result.py  solver_interface.py
logic/: equationsystem.py  solvers.py  util.py
model/: equation.py  equationsystem.py  result.py  solver_interface.py  solvers.py  util.py  variable.py
resources/: css.py
ui/: editor.default.equation.txt  editor.default.python.txt  editor.py  gui.py  menu.py  syntax.py  table.py  window.py
ui/default_text/: editor.default.equation.txt  editor.default.python.help.txt  editor.default.python.txt
ui/pyvis/: template.html  template_wip.html
ui/widgets/: editor.py  equationsystem.py  plot.py  results.py  statusbar.py  variabletable.py
validation/: grammar.py  lexer.py  validation.py
view/: dock.py  menu.py  window.py
view/editor/: editor.py
view/editor/default_text/: editor.default.equation.txt  editor.default.function.txt  editor.default.python.help.txt  editor.default.python.txt
view/pyvis/: template.html
view/widgets/: graph.py  namespace.py  object_table.py  plot.py  python.py  results.py  statusbar.py  topbar.py
