[tool.poetry]
name = "frees"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8,<3.12"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
pyqt6 = "^6.4.2"
networkx = "^3.0"
coolprop = "^6.4.3.post1"
scipy = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
