[tool.poetry]
name = "PiES"
version = "0.9.0"
description = "Solves linear and non-linear equation systems"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
pyqt6 = "^6.4.2"
networkx = "^3.0"
coolprop = "^6.4.3.post1"
scipy = "^1.10.1"
pint = "^0.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
